# TinyC2

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  install.sh
example/listener-plugin/: Makefile  config.yaml  go.mod  main.go
example/listener-plugin/listener/: protocol.go
example/listener-plugin/pic/include/: imports.h
example/listener-plugin/pic/src/: channel.c
implant/: CMakeLists.txt
implant/include/: Channel.h  Coff.h  Command.h  Implant.h  Ntdll.h  Stdlib.h  phnt.h
implant/src/: Implant.cpp  Main.cpp
implant/src/Channel/: Channel.cpp
implant/src/Coff/: BofApis.cpp  CoffLoader.cpp  CoffRelocations.cpp
implant/src/Command/: Command.cpp  CommandCd.cpp  CommandChannel.cpp  CommandCp.cpp  CommandDownload.cpp  CommandExecuteAssembly.cpp  CommandExit.cpp  CommandInjectShellcode.cpp  CommandInlineExecute.cpp  CommandJob.cpp  CommandPs.cpp  CommandRun.cpp  CommandShell.cpp  CommandUpload.cpp  CommandWhoami.cpp
implant/src/Stdlib/: Base64.cpp  Fs.cpp
plugins/http/: Makefile  config.yaml  go.mod  go.sum  main.go
plugins/http/listener/: handler.go  http.go
plugins/http/pic/: services.spec
plugins/http/pic/include/: channel.h  imports.h
plugins/http/pic/src/: channel.c
plugins/tcp/: Makefile  config.yaml  go.mod  main.go
plugins/tcp/listener/: handler.go  tcp.go
plugins/tcp/pic/: Makefile  channel.spec
plugins/tcp/pic/include/: channel.h  imports.h
plugins/tcp/pic/libs/libtcg/: rules.yar
plugins/tcp/pic/src/: channel.c  services.c
sdk/: go.mod  sdk.go
server/: config.yaml  go.mod  go.sum  main.go
server/internal/cli/: complete.go  console.go  execute.go  lua.go
server/internal/cli/handlers/: exit.go  implant.go  listener.go  plugin.go
server/internal/core/: engine.go  implant.go  listener.go  logger.go  plugin.go
server/internal/pkg/logger/: logger.go
server/internal/pkg/pack/: bofpack.go
